--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "codyhouse-framework": "^3.0.11",
     "core-js": "^3.8.3",
     "jquery": "^3.6.1",
+    "nuxt": "^3.0.0",
     "primevue": "^3.20.0",
     "vue": "^3.2.13",
+    "vue-meta": "^3.0.0-alpha.10",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
